--- a/src/app/pages/slider/slider.component.html
+++ b/src/app/pages/slider/slider.component.html
@@ -1,8 +1,8 @@
-<div class=" mx-5 md:mx-8 xl:mx-12 rounded-lg text-center text-white" style="background-color: rgba(0,0,0,0.5);">
+<div class=" mx-5 md:mx-8 xl:mx-12 rounded-lg text-center text-white my-3" style="background-color: rgba(0,0,0,0.5);">
   <h2 class="text-2xl pt-5 font-bold">BAN ĐIỀU HÀNH</h2>
   <p class="py-5 font-semibold">Doanh nghiệp muốn phát triển bền vững thì phải nhờ vào sợi dây liên kết giữa từng cá nhân với tầm nhìn và mục tiêu chiến lược của Công Ty.</p>
 </div>
-<div class="w-full px-5 md:px-10 xl:px-16 font-sans">
+<div class="w-full px-5 md:px-10 xl:px-16 font-sans my-3">
 <owl-carousel-o [options]="customOptions">
   <ng-container *ngFor="let slider of image">
     <ng-template carouselSlide>
