--- a/src/app/layouts/header/header.component.scss
+++ b/src/app/layouts/header/header.component.scss
@@ -3,7 +3,7 @@
   transition: all 1s ease-in;
 }
 .changebg{
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 a{
@@ -20,12 +20,10 @@ a{
 }
 
 .mobile{
-  transition-property: background-color;
-  transition-duration: 2s;
-  transition-timing-function: ease-in;
-  transition-delay: 0.7s;
+  transition: all 2s ease-out;
+  transition-delay: 1s;
 }
 button{
-  transition-delay: 1s;
-  transform: rotate3d(180);
+  transition: all 2s ease-out;
+  transition-delay: 2s;
 }
