fixt footer and animation

--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="relative">
-  <div class="flex flex-wrap w-full z-50 text-white m-0" style="background-color:rgba(0,0,0,0.9) ;">
+  <div class="flex flex-wrap w-full z-50 text-white m-0" style="background-color:rgba(0,0,0,0.9) ;z-index:-1;">
     <div class="md:w-1/2 h-full my-auto">
       <h1 class="text-center pb-5 text-xl md:text-2xl">THÔNG TIN LIÊN HỆ</h1>
       <ul style="width: 70%; margin: 0px auto" class="text-sm md:text-lg overflow-hidden">
@@ -18,7 +18,7 @@
         New Construction luôn sẵn sàng và rất hân hạnh được hỗ trợ Quý Khách.
       </h2>
       <div class="w-full">
-        <h3 class="text-center font-semibold text-white">FACEBOOK</h3>
+        <h3 class="text-center font-semibold text-white">Facebook</h3>
         <div class="w-full px-3 xl:px-8 mx-auto text-center">
           <div class="w-full mx-auto text-center">
             <a href="https://www.facebook.com/Cungcapkhonggianxanh"
