--- a/src/app/pages/slider/slider.component.html
+++ b/src/app/pages/slider/slider.component.html
@@ -2,7 +2,7 @@
   class="mx-5 md:mx-8 xl:mx-12 rounded-lg text-center text-white my-3"
   style="background-color: rgba(0, 0, 0, 0.5)"
 >
-  <h2 class="text-2xl pt-5 font-bold">BAN ĐIỀU HÀNH</h2>
+  <h2 class="text-2xl pt-5 font-bold leading-6">BAN ĐIỀU HÀNH</h2>
   <p class="py-5 font-semibold">
     Doanh nghiệp muốn phát triển bền vững thì phải nhờ vào sợi dây liên kết giữa
     từng cá nhân với tầm nhìn và mục tiêu chiến lược của Công Ty.
