--- a/src/app/pages/selected/selected.component.html
+++ b/src/app/pages/selected/selected.component.html
@@ -1,18 +1,13 @@
 <app-layout>
-  <div class="bg-gray-100 relative w-full max-w-full">
+  <div class="max-h-screen">
     <div class="homebg items-center">
-      <p
-        class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold ml-12 bg-gray-700 text-white py-2 top-32"
-      >
+      <p class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold ml-12 bg-gray-700 text-white py-2 top-32">
         DỰ ÁN NỔI BẬT
       </p>
     </div>
     <div class="w-full flex absolute bottom-4">
-      <img
-        src="../../../assets/images/logo.png"
-        class="object-scale-down h-24 w-auto absolute right-2"
-        alt="NEW CONSTRUCTION"
-      />
+      <img src="../../../assets/images/logo.png" class="object-scale-down h-24 w-auto absolute right-2"
+        alt="NEW CONSTRUCTION" />
       <p class="text-white">
         <span class="text-xl pl-2"></span> <br />
         162 Ngo Tat To Street,Ward 22, Binh Thanh District,HCMC <br />
@@ -20,93 +15,73 @@
         Website. newconstruction.vn
       </p>
     </div>
-    <div class="w-full relative">
+  </div>
+  <div class="bg-gray-100 relative w-full max-w-full m-0 pb-1">
+    <div class="w-full relative py-10">
       <div class="text-center">
-        <h2
-          class="my-5 text-2xl"
-          style="font-family: Arial, Helvetica, sans-serif"
-        >
+        <h2 class="my-0 pb-4" style="font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
           CÁC DỰ ÁN NỘI BẬT 2022
         </h2>
-        <p class="text-xl" style="font-family: Helvetica; opacity: 0.8">
+        <p class="text-base italic" style="font-family: Helvetica; opacity: 0.9">
           Dự án được thực hiện năm 2022 <br />
           Đơn vị thực hiện New Construction <br />
           Dự án cao nhất tới 4.5 tỷ <br />
           Phong cách: hiên đại
         </p>
       </div>
-      <div
-        class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-full py-4 px-16"
-      >
-        <div
-          class="justify-start items-center last:mr-auto w-full h-full cursor-pointer"
-          *ngFor="let img of sl_image"
-        >
-          <div
-            class="relative max-w-sm transition-all duration-300 cursor-pointer"
-          >
+      <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-full pt-6 px-16">
+        <div class="justify-start items-center last:mr-auto w-full h-full cursor-pointer" *ngFor="let img of sl_image">
+          <div class="relative max-w-sm transition-all duration-300 cursor-pointer">
             <a style="cursor: pointer">
-              <img
-                class="rounded-lg xl:h-[250px] drop-shadow-xl"
-                src="../../../assets/images/selected/{{ img[0] }}"
-                alt="{{ img[1] }}"
-              />
+              <img class="rounded-lg xl:h-[250px] drop-shadow-xl" src="../../../assets/images/selected/{{ img[0] }}"
+                alt="{{ img[1] }}" />
             </a>
           </div>
         </div>
       </div>
     </div>
-    <div class="w-full rounded-lg border shadow-md px-10 my-7 thongke">
-      <h2 class="text-center text-white text-2xl py-8 font-bold font-sans">
-        Thống kê
+    <div class="w-full rounded-lg border shadow-md px-10 thongke">
+      <h2 class="text-center text-white text-2xl py-10 font-bold font-sans">
+        THỐNG KÊ
       </h2>
-      <div
-        id="fullWidthTabContent"
-        class="border-t border-gray-200 dark:border-gray-600"
-      >
-        <div
-          class="p-4 rounded-lg md:p-8"
-          style="background-color: rgba(112, 106, 109, 0.4)"
-          id="thongke"
-          role="tabpanel"
-          aria-labelledby="thongke-tab"
-        >
+      <div class="border-t border-gray-200 dark:border-gray-600">
+        <div class="p-4 rounded-lg md:p-8" style="background-color: rgba(112, 106, 109, 0.6)" id="thongke"
+          role="tabpanel" aria-labelledby="thongke-tab">
           <dl
-            class="grid grid-cols-2 gap-8 p-4 mx-auto max-w-screen-xl text-gray-900 sm:grid-cols-3 xl:grid-cols-6 dark:text-white sm:p-8"
-          >
+            class="grid grid-cols-2 gap-8 p-4 mx-auto max-w-screen-xl sm:grid-cols-3 xl:grid-cols-6 dark:text-white sm:p-8">
             <div class="flex flex-col justify-center items-center">
-              <dt class="mb-2 text-3xl font-extrabold">20+</dt>
-              <dd class="text-blue-600 text-xl dark:text-white font-semibold">
+              <dt class="mb-2 text-3xl font-bold">20+</dt>
+              <dd style="color:#c6ff00;" class="text-xl dark:text-white font-semibold">
                 Nhà thiết kế
               </dd>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <dt class="mb-2 text-3xl font-extrabold">100+</dt>
-              <dd class="text-blue-600 text-xl dark:text-white font-semibold">
+              <dt class="mb-2 text-3xl font-bold">100+</dt>
+              <dd style="color:#c6ff00;" class="text-xl dark:text-white font-semibold">
                 Nhà hội họa
               </dd>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <dt class="mb-2 text-3xl font-extrabold">100+</dt>
-              <dd class="text-blue-600 text-xl dark:text-white font-semibold">
+              <dt class="mb-2 text-3xl font-bold">100+</dt>
+              <dd style="color:#c6ff00;" class="text-xl dark:text-white font-semibold">
                 Kĩ sư
               </dd>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <dt class="mb-2 text-3xl font-extrabold">100+</dt>
-              <dd class="text-blue-600 text-xl dark:text-white font-semibold">
+              <dt class="mb-2 text-3xl font-bold">100+</dt>
+              <dd style="color:#c6ff00;" class="text-xl dark:text-white font-semibold">
                 Dự án lớn
               </dd>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <dt class="mb-2 text-3xl font-extrabold">50+</dt>
-              <dd class="text-blue-600 text-xl dark:text-white font-semibold">
+              <dt class="mb-2 text-3xl font-bold">50+</dt>
+              <dd style="color:#c6ff00;" class="text-xl dark:text-white font-semibold">
                 Dự án hot
               </dd>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <dt class="mb-2 text-3xl font-extrabold">4000+</dt>
-              <dd class="text-blue-600 text-xl dark:text-white font-semibold">
+              <dt class="mb-2 text-3xl font-bold">4000+</dt>
+              <dd style="color:#c6ff00;" class="text-xl dark:text-white font-semibold">
                 Nhân viên
               </dd>
             </div>
@@ -114,37 +89,24 @@
         </div>
       </div>
     </div>
-    <div class="w-full relative">
+    <div class="w-full relative py-10">
       <div class="text-center">
-        <h2
-          class="my-5 text-2xl"
-          style="font-family: Arial, Helvetica, sans-serif"
-        >
+        <h2 class="my-0 pb-4" style="font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
           Nhà chị Loan
         </h2>
-        <p class="text-xl" style="font-family: Helvetica; opacity: 0.9">
+        <p class="text-base italic" style="font-family: Helvetica; opacity: 0.9">
           Chủ Đầu Tư: Chị Loan <br />
           Quy mô: 70 m2 x 2 lầu <br />
           Mức đầu tư: 1.3 tỷ <br />
           Phong cách: hiện đại
         </p>
       </div>
-      <div
-        class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-full py-4 px-16"
-      >
-        <div
-          class="justify-start items-center last:mr-auto w-full h-full cursor-pointer"
-          *ngFor="let img1 of image"
-        >
-          <div
-            class="relative max-w-sm transition-all duration-300 cursor-pointer"
-          >
+      <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-full pt-6 px-16">
+        <div class="justify-start items-center last:mr-auto w-full h-full cursor-pointer" *ngFor="let img1 of image">
+          <div class="relative max-w-sm transition-all duration-300 cursor-pointer">
             <a style="cursor: pointer">
-              <img
-                class="rounded-lg xl:h-[250px]"
-                src="../../../assets/images/selected/{{ img1[0] }}"
-                alt="{{ img1[1] }}"
-              />
+              <img class="rounded-lg xl:h-[250px] drop-shadow-xl" src="../../../assets/images/selected/{{ img1[0] }}"
+                alt="{{ img1[1] }}" />
             </a>
           </div>
         </div>
