--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -4,12 +4,12 @@
       <h1 class="text-center pb-5 text-xl md:text-2xl">THÔNG TIN LIÊN HỆ</h1>
       <ul style="width: 70%; margin: 0px auto" class="text-sm md:text-lg overflow-hidden">
         <li class="leading-8 overflow-hidden">
-          Địa chỉ: 162 Ngô Tất Tố, phường 22, Bình Thạnh, Tp.HCM
+          Địa chỉ:Đường số 2, phường Hiệp Bình Phước, Thủ Đức, Tp.HCM
         </li>
-        <li class="leading-8 overflow-hidden">Hotline: (028) 665.777.68 - 089.8857.089</li>
-        <li class="leading-8 overflow-hidden">Email: newconstructionhcm@gmail.com</li>
+        <li class="leading-8 overflow-hidden">Hotline:0336493364</li>
+        <li class="leading-8 overflow-hidden">Email: chutuannghia97@gmail.com</li>
         <li class="leading-8 overflow-hidden">
-          Nhà xưởng: 18A Đường 157, xã Bình Mỹ, Củ Chi, TP.HCM
+          Nhà xưởng: Đường số 2, phường Hiệp Bình Phước, Thủ Đức, Tp.HCM
         </li>
       </ul>
     </div>
@@ -21,11 +21,11 @@
         <h3 class="text-center font-semibold text-white">Facebook</h3>
         <div class="w-full px-3 xl:px-8 mx-auto text-center">
           <div class="w-full mx-auto text-center">
-            <a href="https://www.facebook.com/Cungcapkhonggianxanh"
-              class="text-blue-800 text-center text-sm xl:text-xl overflow-hidden">https://www.facebook.com/Cungcapkhonggianxanh</a>
+            <a href="https://www.facebook.com"
+              class="text-blue-800 text-center text-sm xl:text-xl overflow-hidden">https://www.facebook.com</a>
             <br />
             <a href="https://www.facebook.com/Newconstruction.vn"
-              class="text-center text-blue-800 text-sm xl:text-xl overflow-hidden">https://www.facebook.com/Newconstruction.vn</a>
+              class="text-center text-blue-800 text-sm xl:text-xl overflow-hidden">https://www.facebook.com</a>
           </div>
           <br />
           <h3 class="text-center text-xl mb-4">QR Code</h3>
